[package]
name = "shiguredo_libyuv"
version = "2026.1.0"
edition = "2024"
rust-version = "1.88"
description = "Rust bindings for Google's libyuv image conversion and processing library"
readme = "README.md"
homepage = "https://github.com/shiguredo/libyuv-rs"
repository = "https://github.com/shiguredo/libyuv-rs"
license = "Apache-2.0"
build = "build.rs"
include = [
    "/LICENSE",
    "/README.md",
    "/THIRD_PARTY_LICENSES",
    "/build.rs",
    "/src/**",
]

# 以降は外部ライブラリビルド用のメタデータ
# (この内容は build.rs の中からのみ参照される)
#
# なお libyuv にはタグが存在しないので、コミットハッシュで参照している
[package.metadata.external-dependencies.libyuv]
git = "https://chromium.googlesource.com/libyuv/libyuv"
version = "d23308a2a7442be8e559b1b471862fd7588d6a57"

# libjpeg-turbo はタグが存在するが、再現性のためコミットハッシュで固定する
# 3.1.90 = e1dbfa7be7b7e54922020051dc77781e92739700
[package.metadata.external-dependencies.libjpeg-turbo]
git = "https://github.com/libjpeg-turbo/libjpeg-turbo"
version = "e1dbfa7be7b7e54922020051dc77781e92739700"

[workspace]
members = ["pbt"]
exclude = ["fuzz"]

[dependencies]

[build-dependencies]
bindgen = "0.72"
shiguredo_cmake = "4.3"
shiguredo_toml = "2026.2"

[features]
source-build = []
